
Package: R.utils
================

Version: 1.6.6 [2011-03-08]
o Now Arguments$getWritablePath(NULL) returns NULL without asserting
  write permission, which is analogue to how it is done with
  Arguments$getReadablePath(NULL).


Version: 1.6.5 [2011-03-03]
o Added trial version of createFileAtomically() for creating files
  atomically, by writing to a temporary file which is then renamed.
o Added trial versions of push-, popBackupFile() for backing up
  and restoring a file.
o Added trial versions of push-, popTemporaryFile() for working
  toward a temporary file.
o Added trial version of renameFile(), which to additional
  validation afterward.


Version: 1.6.4 [2011-02-28]
o (Incomplete revision submitted to CRAN by mistake)


Version: 1.6.3 [2011-02-20]
o Added argument 'par' to devNew() for applying graphical parameters
  at the same time as the device is opened, which is especially
  useful when using devEval().
o Changed argument 'force' of devEval() to default to TRUE.


Version: 1.6.2 [2011-02-14]
o Added trial version of devEval() for simple creation of images.
o Added argument 'aspectRatio' to devNew(), which updates/sets
  the 'height' or the 'width', if the one of the other is not given.


Version: 1.6.1 [2011-02-01]
o ROBUSTNESS: Now using argument 'fixed' (not 'fix') in regexpr() calls.


Version: 1.6.0 [2010-12-07]
o Added evalWithTimeout().


Version: 1.5.8 [2010-11-21]
o ROBUSTNESS: Now loadObject() asserts that the file exists.  If file
  doesn't exist, an informative error message is thrown.
o ROBUSTNESS: Now System$mapDriveOnWindows() does not give an error if
  trying to map the same drive letter to the same path multiple times.
o TYPO: Static methods getVector() and getRegularExpression() of
  Arguments would report the incorrect argument name.
o BUG FIX: System$mapDriveOnWindows() and System$unmapDriveOnWindows()
  did not work if the path contained a space.  Now the path is quoted.