@@ -6,6 +6,8 @@ Version: 1.6.6 [2011-03-08]
 o Now Arguments$getWritablePath(NULL) returns NULL without asserting
   write permission, which is analogue to how it is done with
   Arguments$getReadablePath(NULL).
+o Added argument 'timestamp' to printf() for Verbose so that the
+  timestamp can be turned off/on explicitly as for cat().
 
 
 Version: 1.6.5 [2011-03-03]
